sets changed to unmodifiable in MiniLottoTest